# Dawa

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
.devcontainer/: devcontainer.json
src/: chat.py  config.py
src/api/: main.py
src/cli/: chat.py  dawa.py  dawa_cli.py  runners.py
src/cli/lib/: data_fetch.py  gemini.py  hybrid_search.py  medicine_data.py  semantic_search.py  utils.py
src/lib/: gemini.py  hybrid_search.py  medicine_data.py  runners.py  semantic_search.py  utils.py
tests/: test_api.py  test_clean_corpus.py  test_skip_doc.py  test_utils.py
ui/: .env.example  chat.py  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
ui/src/: App.tsx  index.css
ui/src/components/ui/: button.tsx
