[project]
name = "dawa"

version = "0.0.1"
authors = [
  { name="Yasser Yaya-Oye", email="y.yayaoye@gmail.com" },
]
description = "AI Powered CLI tool for pharmacists"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["medical", "drugs", "health"]
dependencies = [
    "google-genai>=1.47.0",
    "langchain-text-splitters>=0.3.11",
    "llama-index>=0.14.12",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "typer>=0.21.1",
]
